Adding JavaDoc comment blocks